<resources>
    <string name="app_name">BBCA</string>
    <string name="enter_text">Введите текст</string>
    <string name="task_1">Задание 1</string>
    <string name="task_2">Задание 2</string>
    <string name="task_3">Задание 3</string>
    <string name="task_4">Задание 4</string>
    <string name="task_5">Задание 5</string>
    <string name="task_6">Задание 6</string>
    <string name="task_7">Задание 7</string>
    <string name="task_8">Задание 8</string>
    <string name="download_user_data">Выгрузить пользовательские данные</string>
    <string name="start_new_session">Начать новую сессию</string>
    <string name="new_session_success">Запущена новая сессия</string>
    <string name="keystroke_task">Введите текст минимум на 100 символов (например, опишите сюжет фильма или книги):</string>
    <string name="scroll_task">Прочитайте тест до конца</string>
    <string name="swipe_task">Пролистайте картинки: %1$d/50</string>
    <string name="swipe_like_task">Лайкайте понравившиеся двойным кликом: %1$d/20</string>
    <string name="scale_task">Найдите персонажей (нажмите на персонажа, чтобы продолжить): %1$s %2$d/%3$d</string>
    <string name="find_character">Найдите персонажа</string>
    <string name="click_task">Нажмите на все кнопки</string>
    <string name="video_task">Перемотайте всю рекламу в видео</string>
    <string name="long_click_task">Удалите все элементы посредством длительного нажатия: %1$d/10</string>
    <string name="draw_task">Нарисуйте символ %1$s: %2$d/10</string>
    <string name="text_to_read">Я в своем познании настолько преисполнился, что я больше не мог в нем ни сомневаться, ни осуждать, что оно единственное: я был только готов. Ну, что ж, что наилучший поэт Хуарна больше или меньше, чем Исайя или как Кретьен или Сервантес или Шекспир;  пусть Бог судит, я же - судья и все отправляю по справедливости - воздал ему честь, которой он заслуживает. Я полагаю, что, как и все вы, я всех их рассматривал строго, но ведь ни в кого не швырял всем, что есть самого значительного и самого лучшего в человечестве и в поэзии. Я говорил уже, что считаю поэтов людьми выдающихся и очень нежными, существами необыкновенно возвышенными. Но что мне еще сказать о достоинствах некоторых из них? Я говорил о том, что мне нравится в них, чтобы не допустить отступления от истины в описании их достоинств. А говорить о том же самом недостатках я не могу, потому что знал, что не имею права пренебрегать описанием пороков. Что касается величайших, то о них я все знаю. Так вот, будь у меня рассказ о пороке, я его не привел бы в том виде, как он у меня сложился; однако, если бы я его сейчас пересказал, то поневоле оказался бы в плену у непристойных слов и грубых выражений, которыми прелюбодей опошлил столь великое существо, как женщина. Мне была бы невыносима мысль, что бедность и болезни помешали им свершить своими руками то, что было бы возможно только с помощью Бога. Но я должен быть несправедлив. Ведь они были такими пылкими юношами, что даже разврат холодил их сердца, и они не могли придумать, как сделать так, чтобы страсти, их осенившие, не угасли. Однако вы, как уже заметили, не согласились со мной в одном: я говорю, что Бог судил их по справедливости, как Он это делал всегда, и сказал им: "Один из вас умрет, так не мучьте же себя больше, а женитесь". Не будем больше говорить о пороках и постараемся избежать побуждений, которые в такой мере возбуждают нетерпение, но которые, если их переживешь, несут с собой много бед. Я убеждал вас сейчас, что не хотел бы лишиться Джилл. Я прошу вас, чтобы вы рассказали мне все, что знаете о ней.
        \n– Но вам больше не надо ничего скрывать от меня, доктор Кент.
        \n– Вы полагаете, что все теперь будет в порядке, если вы доверяете мне?
        \nКент устало улыбнулся:
        \n– Я бы предпочел, чтобы этого не было, если эта девушка – единственное, что вас интересует.
        \n После того, как Кент ушел, Билл пошел в ванную комнату, чтобы подобрать себе подходящую одежду. Почувствовав волнение, он переоделся и вернулся в комнату. Здесь его ожидала Джилл с другим подносом в руках. Она отодвинула кресло, чтобы он мог сесть, поставила поднос с завтраком на кофейный столик и сказала:
        \n– Завтрак в постель, это приятно. Как это мило с вашей стороны!
        После того, что произошло на свидании, он уже был не в состоянии питать хоть какое-то доверие к Джилл и пытался по возможности избегать ее, а тут он встал и предложил ей завтрак в постель. «Но это так мило!» – думала она. Не задавая ему никаких вопросов, Джилл принялась за еду. Два невеселых дня заполняли рабочую неделю. Кент, плохо знавший Джилл, уже начинал думать, что она всегда была такой и что, возможно, он нашел другую женщину. Однажды, когда они были в Милане и Билл был занят, Джилла вдруг решила принять ванну. Джиллиан Финч в жизни своей никогда не принимала ванны и считала это более приятным делом, чем принять душ. Она не поленилась встать пораньше и, прежде чем отправиться в ванную, как следует вымыла голову. Затем она переоделась в пижаму и легла в постель с желанием, чтобы Билл, который в это время находился в мастерской, заметил ее красоту и подумал, что он лучше владеет собой, чем она. Сказав ему, что у нее нет никакого желания спать в одиночестве, Джилли опять оделась и отправилась в ванную. К счастью, она не стала мочиться на пол, а спустила воду. Налюбовавшись кранами, она, опираясь руками на борт ванны, с наслаждением поплескалась. В это время вошел Билл. Он уже успел переодеться. Его взгляд привлекли буйные рыжие локоны, обрамлявшие лицо Джилл Финч, так что он не мог не заметить ее. В течение нескольких минут они молча, неподвижно смотрели друг на друга, а потом он открыл дверцу и вылез из машины. Ждать миссис Колби пришлось довольно долго, но она вернулась к нему. Села рядом, уткнулась лбом в его плечо и закрыла глаза. Патрик почувствовал, как ее рука мягко легла на его плечо. И его напряжение немного спало.
        \n- Прости, - сказала она тихо. Мне, правда, не следовало говорить этого. Я такая трусиха. Но.. спасибо.
        Он протянул руку, и она переплела свои пальцы с его. А потом, не произнеся ни слова, поехали домой. К тому времени, когда они вернулись, миссис Коллиби уже собрала ужин, и Патрик, сев с ней рядом, был в одночасье польщен и смущен. Казалось, что она разделяет его стыд, но не стала ни пытаться его переубедить, ни обнять его. Только поцеловала на прощание, и сказала, что всегда сможет на него рассчитывать. Счастье, которое он испытывал, было невыносимым. Но еще сильнее Патрик испытывал стыд оттого, что это счастье было таким коротким. Ему хотелось одновременно предаться любовной страсти и заплакать. И чтобы она обняла его, и утешила. И у него было ощущение, что эти два чувства ничего не значат для нее. В это время на другом конце земного шара чемпион мира по литрболу Грэгори Ботл - тот самый, о котором потом напишет Барбара Картленд - лежал в своей палатке в лесу под Воронежем. Для временного закрытия глаз он пригубил большой бокал виски, который ему в стакан подал его друг русский наемник из ГРУ. Тот назвался Костей "Лисом", потому что, как и Ботл, был неравнодушен к охоте. Сдвоенное виски, виски особой марки "Джонни Уокер", было очень похоже на запах. Николай ворочался в такт ухающим ударам сердца, он пытался заснуть, но его мысли не возвращались в Афганистан. Они все еще были слишком далеко. И вот прямо сейчас, во сне, Николай ощущал жгучее желание вернуться в Афганистан и сделать что-нибудь важное для этой страны. Он хотел сделать что угодно, что угодно по-настоящему.  После первой (и последней) неудачной попытки Ники убраться из Афганистана, в ноябре 2002 года он уехал в "горячую точку" - все равно куда. В 2005 году на его защиту встал бывший кадровый военный офицер Джеймс Маллалли, и они поженились в Амстердаме. Дочь Ника, Келли, родилась в 2006 году.  Но где бы ни был Ника, он все равно думал об Афганистане. После событий 11 сентября 2001 года его стали преследовать тяжелые сны, в которых он возвращался в Баграм, где был накануне бойни. Ему снятся сотни русских солдат - они лежат в джунглях, обнявшись, вокруг выжженной земли. Они его не слышат, но знают, что он тут, что это он им угрожает. Но Ника слышит.
        \n– Ника, как ты можешь! - воскликнул Джеймс. - Боже мой, как же ты мог так поступить!
        \n– Малл, я не мог иначе, - ответил он тихо. - Эта война обернулась кошмаром.
        Старый доктор Ботл умер во сне в феврале 2011 года. Он прожил долгую жизнь. Он был слегка эксцентричным и непредсказуемым человеком. Но очень энергичным и, по отзывам, обладал удивительными способностями - он предсказывал будущее: то кого-то из детей Ники поймают и расстреляют на заднем дворе, то дочке поступит предложение от русского олигарха. А однажды Ника даже попал под прицел снайперов во время одного из нападений на блокпосты. Кошмарные сны были его реальным миром, и он во сне пробудил его, чтобы предотвратить очередной кошмар.
</string>
    <string name="task_successfully_done">Вы успешно выполнили задание!</string>
    <string name="start">Начать</string>
    <string name="should_delete">Нужно удалить №%1$d</string>
    <string name="like">Лайк поставлен!</string>
    <string name="error">Что-то пошло не так. Обратитесь к преподавателю</string>
    <string name="clear">Очистить</string>
    <string name="next">Далее</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="gravity">Gravity</string>
    <string name="accelerometer_linear">Accelerometer Linear</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="light">Light</string>
    <string name="proximity">Proximity</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>

    <string name="character_wally">Уолли (Где Уолли?)</string>
    <string name="character_batman">Бэтмен (DC)</string>
    <string name="character_robin">Робин (DC)</string>
    <string name="character_subzero">Саб-Зиро (Mortal Kombat)</string>
    <string name="character_scorpion">Скорпион (Mortal Kombat)</string>
    <string name="character_stormtroopers">Штурмовики (Звездные войны)</string>
    <string name="character_finn">Финн (Время приключений)</string>
    <string name="character_harry">Гарри Поттер</string>
    <string name="character_megabrain">Мегамозг</string>
    <string name="character_captain_america">Капитан Америка (Marvel)</string>
    <string name="character_waltboy">Волт-Бой (Fallout)</string>
    <string name="character_spider_man">Человек-Паук (Marvel)</string>
    <string name="character_super_family">Суперсемейка</string>
    <string name="character_deadpool">Дедпул (Marvel)</string>
    <string name="character_chief">Мастер Чиф (Halo)</string>
    <string name="character_zoidberg">Зойберг (Футурама)</string>
    <string name="character_hulk">Халк (Marvel)</string>
    <string name="character_joker">Джокер (Тёмный рыцарь)</string>
    <string name="character_leonid">Царь Леонид (300 спартанцев)</string>
    <string name="character_flash">Флэш (DC)</string>

    <string name="ok">ОК</string>
    <string name="identifier_hint">Придумайте идентификатор</string>
    <string name="identifier_repeat_hint">Повторите идентификатор</string>
    <string name="identifier_placeholder">ivanov_bvt0000</string>
    <string name="identifier_too_short">Минимум 6 символов</string>
    <string name="identifiers_matching_error">Идентификаторы не совпадают</string>
    <string name="session_counter">Сессия %1$d/5</string>
</resources>