<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mtuci.bbca.main.MainActivity">


    <TextView
        android:id="@+id/textViewTouch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        style="@style/Debug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/buttonKeyStroke"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:text="@string/task_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/buttonScroll"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonKeyStroke" />
    <Button
        android:id="@+id/buttonSwipe"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonScroll" />

    <Button
        android:id="@+id/buttonScale"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSwipe" />

    <Button
        android:id="@+id/buttonClicks"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonScale" />

    <Button
        android:id="@+id/buttonVideo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClicks" />

    <Button
        android:id="@+id/buttonLongClicks"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVideo" />

    <Button
        android:id="@+id/buttonPaint"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLongClicks" />

    <Button
        android:id="@+id/buttonNewSession"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/buttonPaint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/start_new_session" />

    <TextView
        android:id="@+id/textViewAccelerometer"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/accelerometer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textViewGyroscope"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/gyroscope"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccelerometer"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/textViewGravity"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/gravity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGyroscope"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLinearAccelerometer"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/accelerometer_linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGravity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewMagneticField"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/magnetic_field"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLinearAccelerometer"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textViewLight"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMagneticField"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewProximity"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/proximity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLight"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/temperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProximity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewPressure"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/pressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperature"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textViewHumidity"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        style="@style/Debug"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPressure"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonShareData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@id/buttonDownloadData"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:contentDescription="@string/download_user_data" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDownloadData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/stat_sys_download"
        android:contentDescription="@string/download_user_data" />

</androidx.constraintlayout.widget.ConstraintLayout>